--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,43 @@
-node_modules
-dist
+# Dependencies
+node_modules/
+.pnp
+.pnp.js
+
+# Testing
+coverage/
+
+# Production
+dist/
+build/
+
+# Misc
 .DS_Store
-server/public
-vite.config.ts.*
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 *.tar.gz
+
+# Project specific
+data/*.json
+!data/example.json
+
+# Uploads - игнорировать все файлы в uploads кроме указанных
+uploads/*
+!uploads/7fe83ff9bbbc4c304cd7d9edf2f83091
+!uploads/66740381c38fadf5e3cca0aa242388a5
