Исправление конфигурации для деплоя на Netlify

--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "build": "vite build",
     "start": "cross-env NODE_ENV=production node dist/index.js",
     "check": "tsc",
-    "predeploy": "npm run build",
+    "build:netlify": "cross-env NETLIFY=true vite build",
+    "build:github": "vite build",
+    "predeploy": "npm run build:github",
     "deploy": "gh-pages -d dist"
   },
-  "homepage": "https://rompompomic.github.io/NailStudio",
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
