--- a/data/settings.json
+++ b/data/settings.json
@@ -15,7 +15,7 @@
   "whatsappPhone": null,
   "instagramEnabled": false,
   "instagramUsername": null,
-  "botToken": "8110196785:AAHDP9KEUieadWNYSa7BW6S_PB92y1ZFLfo",
+  "botToken": "",
   "copyright": "© 2025 Все права защищены",
   "adminPassword": "$2b$10$WoVz5W6geOBpyU6RYwC5JeOZAIZqXje4chEkwVJHV1ZW1cXpkyElO",
   "workTimeStart": "08:00",
