--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development tsx server/index.ts",
+    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
+    "dev:server": "cross-env NODE_ENV=development tsx server/index.ts",
+    "dev:client": "vite",
     "build": "vite build",
-    "start": "cross-env NODE_ENV=production node dist/index.js",
+    "preview": "vite preview",
+    "start": "node server/index.js",
     "check": "tsc",
-    "build:netlify": "cross-env NETLIFY=true vite build",
-    "build:github": "vite build",
-    "predeploy": "npm run build:github",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
+  "homepage": "https://rompompomic.github.io/NailStudio",
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
@@ -96,6 +98,7 @@
     "@types/ws": "^8.5.13",
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
+    "concurrently": "^9.2.0",
     "cross-env": "^10.0.0",
     "esbuild": "^0.25.0",
     "gh-pages": "^6.3.0",
